--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
         }
       });
     </script>
+
+    <footer>
+      <p>&copy; 2025 [Seu Nome]. Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
