--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <nav class="d-flex gap-3">
+    <header class="d-flex gap-3 p-3">
       <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
         <i class="bi bi-linkedin"></i>
       </a>
@@ -36,7 +36,7 @@
       <a href="https://x.com/" target="_blank" aria-label="X">
         <i class="bi bi-twitter-x"></i>
       </a>
-    </nav>
+    </header>
 
     <nav class="navbar justify-content-center nav-pills nav-fill">
       <ul class="nav">
@@ -70,6 +70,80 @@
       </ul>
     </nav>
 
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            class="d-block w-100"
+            src="images/dragon 2.jpg"
+            alt="First slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="images/dragon 3.jpg"
+            alt="Second slide"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            class="d-block w-100"
+            src="images/dragon 4.jpg"
+            alt="Third slide"
+          />
+        </div>
+      </div>
+
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <div>CONTENT</div>
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const navbarToggler = document.querySelector(".navbar-toggler");
@@ -82,7 +156,7 @@
     </script>
 
     <footer>
-      <p>&copy; 2025 [Seu Nome]. Todos os direitos reservados.</p>
+      <p>&copy; 2025 BOMBOCLAAT. All Rights Reserved.</p>
     </footer>
   </body>
 </html>
