António Costa update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>My Portfolio</title>
+    <title>António Costa - Portfólio</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,7 +38,7 @@
       </a>
     </header>
 
-    <nav class="navbar justify-content-center nav-pills nav-fill">
+    <nav class="navbar justify-content-center nav-pills nav-fill pb-4">
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link active" href="#">Home</a>
@@ -65,7 +65,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Me</a>
+          <a class="nav-link" href="mailto:pirocada@gmail.com">Contact Me</a>
         </li>
       </ul>
     </nav>
@@ -142,21 +142,10 @@
       </button>
     </div>
 
-    <div>CONTENT</div>
+    <div class="p-5 text-center">PIROCADA</div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const navbarToggler = document.querySelector(".navbar-toggler");
-        if (navbarToggler) {
-          navbarToggler.addEventListener("click", function () {
-            navbarToggler.classList.toggle("change");
-          });
-        }
-      });
-    </script>
-
-    <footer>
-      <p>&copy; 2025 BOMBOCLAAT. All Rights Reserved.</p>
+    <footer class="p-5 text-white text-center bg-dark">
+      <p>&copy; 2025 António Costa. All Rights Reserved.</p>
     </footer>
   </body>
 </html>
