--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body>
+  <body class="text-white dark-dark-bg">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -38,13 +38,13 @@
       </a>
     </header>
 
-    <nav class="navbar justify-content-center nav-pills nav-fill pb-4">
+    <nav class="navbar justify-content-center nav-fill pb-5">
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Experience</a>
+          <a class="nav-link" href="#experience">Experience</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -56,95 +56,105 @@
           >
             Projects
           </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#">Separated link</a></li>
+          <ul class="dropdown-menu dark-dark-bg">
+            <li>
+              <a class="dropdown-item text-white" href="#"
+                >Carris Metropolitana App</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item text-white" href="#">Minecraft Clone</a>
+            </li>
+            <li>
+              <a class="dropdown-item text-white" href="#">Impressora 3D</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="mailto:pirocada@gmail.com">Contact Me</a>
+          <a class="nav-link" href="mailto:antonio.goat.costa@gmail.com"
+            >Contact Me</a
+          >
         </li>
       </ul>
     </nav>
 
-    <div
-      id="carouselExampleIndicators"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-indicators">
+    <main>
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+
+        <div class="carousel-inner" style="height: 600px">
+          <div class="carousel-item active">
+            <img
+              class="d-block w-100"
+              src="images/dragon 2.jpg"
+              alt="First slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="images/dragon 2.jpg"
+              alt="Second slide"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              class="d-block w-100"
+              src="images/dragon 2.jpg"
+              alt="Third slide"
+            />
+          </div>
+        </div>
+
         <button
+          class="carousel-control-prev"
           type="button"
           data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="0"
-          class="active"
-          aria-current="true"
-          aria-label="Slide 1"
-        ></button>
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
         <button
+          class="carousel-control-next"
           type="button"
           data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="1"
-          aria-label="Slide 2"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#carouselExampleIndicators"
-          data-bs-slide-to="2"
-          aria-label="Slide 3"
-        ></button>
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
 
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img
-            class="d-block w-100"
-            src="images/dragon 2.jpg"
-            alt="First slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="images/dragon 3.jpg"
-            alt="Second slide"
-          />
-        </div>
-        <div class="carousel-item">
-          <img
-            class="d-block w-100"
-            src="images/dragon 4.jpg"
-            alt="Third slide"
-          />
-        </div>
-      </div>
+      <section class="p-5 text-center" id="experience">EXPERIENCE</section>
+    </main>
 
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-    <div class="p-5 text-center">PIROCADA</div>
-
-    <footer class="p-5 text-white text-center bg-dark">
+    <footer class="p-5 text-center">
       <p>&copy; 2025 António Costa. All Rights Reserved.</p>
     </footer>
   </body>
