--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
           </a>
           <ul class="dropdown-menu dark-dark-bg">
             <li>
-              <a class="dropdown-item text-white" href="#"
-                >Carris Metropolitana App</a
-              >
+              <a class="dropdown-item text-white" href="#">Irreal Engine</a>
             </li>
             <li>
               <a class="dropdown-item text-white" href="#">Minecraft Clone</a>
@@ -79,6 +77,11 @@
     </nav>
 
     <main>
+
+      <section class="rounded" id="home">
+        <img src="images/foto-perfil.jpg"></img>
+      </section>
+
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
