--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
     </header>
 
     <!-- Make responsive to size adjustments -->
-    <nav class="font-lucida fw-bold navbar bg-color justify-content-center nav-fill p-4 sticky-top">
+    <nav
+      class="font-lucida fw-bold navbar bg-color justify-content-center nav-fill p-4 sticky-top"
+    >
       <ul class="nav">
-        <li class="nav-item ">
+        <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
@@ -78,16 +80,33 @@
     </nav>
 
     <main class="m-auto">
+      <section class="p-5">
+        <!-- break section -->
+      </section>
 
       <!-- Increase font size -->
-      <section class="d-flex flex-wrap align-items-center justify-content-center m-auto p-5 gap-5" style="max-width: 75%;">
-        <img src="images/foto-perfil.jpg" alt="Profile photo of António Costa" class="rounded-circle" style="height:200px;"/>
+      <section
+        class="d-flex flex-wrap align-items-center justify-content-center gap-5 py-5"
+      >
+        <img
+          src="images/foto-perfil.jpg"
+          alt="Profile photo of António Costa"
+          class="rounded-circle"
+          style="height: 300px"
+        />
         <div class="text-center text-md-start">
-          <span class="font-lucida fw-bold fs-5">Hey! My name is</span>
-          <h1 class="m-0 font-monospace fw-bold text-primary">António Costa</h1>
-          <h2 class="font-serif fs-3">Software Developer</h2>
+          <span class="font-lucida fw-bold fs-4">Hey! My name is</span>
+          <h1 class="m-0 font-monospace fw-bold text-primary fs-1">
+            António Costa
+          </h1>
+          <h2 class="font-serif fs-2">Software Developer</h2>
           <p class="mt-4 font-lucida">I am ready to work with you!</p>
         </div>
+      </section>
+
+      <section class="p-5">
+        <div class="p-2"></div>
+        <!-- break section -->
       </section>
 
       <!-- Make responsive to size adjustments -->
