--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>António Costa - Portfólio</title>
+    <link rel="icon" href="images/Logo.svg" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <header class="d-flex gap-3 pt-4 px-4 mx-2">
+    <header class="d-flex gap-3 py-4 px-4 mx-2">
       <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
         <i class="bi bi-linkedin"></i>
       </a>
@@ -39,9 +40,12 @@
     </header>
 
     <!-- Make responsive to size adjustments -->
-    <nav
-      class="font-lucida fw-bold navbar bg-color justify-content-center nav-fill p-4 sticky-top"
-    >
+    <nav class="font-lucida fw-bold navbar bg-color nav-fill p-4 sticky-top">
+      <img
+        class="justify-content-start px-3"
+        src="images/Logo.svg"
+        style="height: 40px"
+      />
       <ul class="nav">
         <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
