--- a/index.html
+++ b/index.html
@@ -15,43 +15,44 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body class="text-white bg-color">
+  <body class="text-white bg-color px-5">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
 
-    <header class="d-flex gap-3 py-4 px-4 mx-2">
-      <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
-        <i class="bi bi-linkedin"></i>
-      </a>
-      <a href="https://github.com/" target="_blank" aria-label="GitHub">
-        <i class="bi bi-github"></i>
-      </a>
-      <a href="https://facebook.com/" target="_blank" aria-label="Facebook">
-        <i class="bi bi-facebook"></i>
-      </a>
-      <a href="https://x.com/" target="_blank" aria-label="X">
-        <i class="bi bi-twitter-x"></i>
-      </a>
-    </header>
+    <script src="js/script.js"></script>
 
     <!-- Make responsive to size adjustments -->
-    <nav class="font-lucida fw-bold navbar bg-color nav-fill p-4 sticky-top">
-      <img
-        class="justify-content-start px-3"
-        src="images/Logo.svg"
-        style="height: 40px"
-      />
-      <ul class="nav">
+    <nav
+      class="font-lucida fw-bold navbar bg-color nav-fill p-4 sticky-top px-5 border-bottom border-dark"
+    >
+      <a class="align-items-left" href="#">
+        <img
+          src="images/Logo.svg"
+          style="height: 40px"
+          alt="Logo of António Costa"
+        />
+      </a>
+
+      <ul class="nav flex-column flex-md-row justify-content-center">
         <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -65,7 +66,11 @@
           </a>
           <ul class="dropdown-menu dropdown-color">
             <li>
-              <a class="dropdown-item text-white" href="#">Irreal Engine</a>
+              <a
+                class="dropdown-item text-white"
+                href="#carouselExampleIndicators"
+                >Irreal Engine</a
+              >
             </li>
             <li>
               <a class="dropdown-item text-white" href="#">Minecraft Clone</a>
@@ -89,22 +94,20 @@
       </section>
 
       <!-- Increase font size -->
-      <section
-        class="d-flex flex-wrap align-items-center justify-content-center gap-5 py-5"
-      >
-        <img
-          src="images/foto-perfil.jpg"
-          alt="Profile photo of António Costa"
-          class="rounded-circle"
-          style="height: 300px"
-        />
-        <div class="text-center text-md-start">
-          <span class="font-lucida fw-bold fs-4">Hey! My name is</span>
-          <h1 class="m-0 font-monospace fw-bold text-primary fs-1">
-            António Costa
+      <section class="d-flex flex-wrap p-5">
+        <div>
+          <h2 class="font-green">Hey there! I'm/</h2>
+          <h1 class="fw-bold display-1" style="font-size: 6.5rem">
+            António Costa.
           </h1>
-          <h2 class="font-serif fs-2">Software Developer</h2>
-          <p class="mt-4 font-lucida">I am ready to work with you!</p>
+          <h2 class="py-2">
+            { I am a Full Stack Software Developer <br />
+            and I am ready to help! }.
+          </h2>
+          <div class="fs-5 pt-4 text-secondary">
+            <p>🚀 Transforming ideas into seamless digital experiences.</p>
+            <p>⚡ Shaping innovative web solutions.</p>
+          </div>
         </div>
       </section>
 
@@ -188,10 +191,35 @@
 
       <!-- Implement -->
       <section class="p-5 text-center" id="experience">EXPERIENCE</section>
+
+      <section class="p-5 text-center" id="about">
+        ABOUT
+        <img
+          src="images/foto-perfil.jpg"
+          alt="Profile photo of António Costa"
+          class="rounded-circle"
+          style="height: 300px"
+        />
+      </section>
     </main>
 
     <footer class="p-5 text-center font-lucida fw-bold">
       <p>&copy; 2025 António Costa. All Rights Reserved.</p>
+
+      <div class="socials d-flex gap-3 py-4 justify-content-center">
+        <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
+          <i class="bi bi-linkedin"></i>
+        </a>
+        <a href="https://github.com/" target="_blank" aria-label="GitHub">
+          <i class="bi bi-github"></i>
+        </a>
+        <a href="https://facebook.com/" target="_blank" aria-label="Facebook">
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a href="https://x.com/" target="_blank" aria-label="X">
+          <i class="bi bi-twitter-x"></i>
+        </a>
+      </div>
     </footer>
   </body>
 </html>
