--- a/index.html
+++ b/index.html
@@ -189,17 +189,72 @@
       <!-- Implement -->
       <section class="p-5" id="experience">
         <h1 class="text-center fw-bold py-5">Experience</h1>
-        <p>Web</p>
-        <div
-          class="progress"
-          role="progressbar"
-          aria-label="Success example"
-          aria-valuenow="25"
-          aria-valuemin="0"
-          aria-valuemax="100"
-          style="width: 300px; height: 10px"
-        >
-          <div class="progress-bar bg-green" style="width: 85%"></div>
+
+        <div class=" p-5 d-flex justify-content-center gap-5">
+          <div>
+            <p">Web Development</p>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Success example"
+              aria-valuenow="90"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              style="width: 320px; height: 10px"
+            >
+              <div class="progress-bar bg-green" style="width: 90%"></div>
+            </div>
+            <p class="py-4">
+              I have advanced proficiency in web development, with strong
+              experience in building responsive, high-performance websites and
+              web applications. My focus is on clean code, scalability, and
+              creating user-friendly interfaces using modern frameworks and
+              technologies.
+            </p>
+          </div>
+          <img src="images/html-logo.png" style="height: 200px;">
+        </div>
+
+        <div>
+            <p>Mobile Development</p>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Success example"
+              aria-valuenow="70"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              style="width: 320px; height: 10px"
+            >
+              <div class="progress-bar bg-green" style="width: 70%"></div>
+            </div>
+            <p class="text-center py-4">
+              I have solid experience in mobile app development, focusing on
+              creating efficient, cross-platform applications with smooth
+              performance and intuitive design. My goal is to deliver mobile
+              solutions that align with both business and user needs.
+            </p>
+          </div>
+
+        <div>
+            <p>Machine Learning</p>
+            <div
+              class="progress"
+              role="progressbar"
+              aria-label="Success example"
+              aria-valuenow="50"
+              aria-valuemin="0"
+              aria-valuemax="100"
+              style="width: 320px; height: 10px"
+            >
+              <div class="progress-bar bg-green" style="width: 50%"></div>
+            </div>
+            <p class="text-center py-4">
+              I possess a foundational understanding of machine learning
+              concepts and tools. I can implement basic models, work with
+              datasets, and integrate AI features into applications to enhance
+              functionality and user experience.
+            </p>
         </div>
       </section>
 
