--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <div class=" p-5 d-flex justify-content-center gap-5">
           <div>
-            <p">Web Development</p>
+            <p">Web</p>
             <div
               class="progress"
               role="progressbar"
@@ -216,7 +216,7 @@
         </div>
 
         <div>
-            <p>Mobile Development</p>
+            <p>Mobile</p>
             <div
               class="progress"
               role="progressbar"
