--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>António Costa - Portfólio</title>
+    <title>Portfolio | António Costa</title>
     <link rel="icon" href="images/Logo.svg" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -192,7 +192,7 @@
       <section class="p-5" id="experience">
         <h1 class="text-center fw-bold py-5 display-3">Experience</h1>
 
-        <section class="p-5">
+        <section class="p-4">
           <!-- break section -->
         </section>
 
@@ -261,12 +261,43 @@
             </p>
           </div>
         </div>
+
+        <section class="p-5">
+          <!-- break section -->
+        </section>
+
+        <section class="container">
+          <h1 class="text-center fw-bold py-5">Tech Stack</h1>
+
+          <div class="d-flex gap-5">
+            <div class="bg-dark bg-opacity-50 w-25 card border-light">
+              <img
+                src="images/js-logo.png"
+                class="w-75 h-75 justify-content-center"
+              />
+            </div>
+
+            <div class="bg-dark bg-opacity-50 w-25 card border-light">
+              <img
+                src="images/css-logo.png"
+                class="w-75 h-75 justify-content-center"
+              />
+            </div>
+
+            <div class="bg-dark bg-opacity-50 w-25 card border-light">
+              <img
+                src="images/html-logo.png"
+                class="w-75 h-75 justify-content-center"
+              />
+            </div>
+          </div>
+        </section>
       </section>
 
       <section class="p-5 justify-content-center" id="about">
         <h1 class="text-center fw-bold py-5 display-3">About Me</h1>
 
-        <section class="p-5">
+        <section class="p-4">
           <!-- break section -->
         </section>
 
@@ -279,20 +310,69 @@
             class="rounded-circle"
             style="height: 300px"
           />
-          <p style="width: 500px">
-            I am a Full Stack Developer with experience in designing and
-            building scalable web applications. My expertise spans both frontend
-            and backend development, using technologies such as React, Node.js,
-            and MongoDB. I focus on writing clean, efficient code and creating
-            solutions that are both functional and user-friendly. I am committed
-            to continuous learning and enjoy collaborating on projects that
-            deliver real value to users and businesses.
-          </p>
+
+          <div class="">
+            <p class="fs-5 py-3" style="width: 500px">
+              I am a Full Stack Developer with experience in designing and
+              building scalable web applications. My expertise spans both
+              frontend and backend development, using technologies such as
+              React, Node.js, and MongoDB.
+            </p>
+            <a
+              href="files/CV.pdf"
+              download="Antonio_Costa_CV.pdf"
+              type="button"
+              class="btn btn-outline-light w-50"
+            >
+              Download CV
+            </a>
+          </div>
+        </div>
+
+        <section class="p-5">
+          <!-- break section -->
+        </section>
+
+        <div class="container d-flex gap-5 justify-content-center p-5">
+          <div class="card bg-dark bg-opacity-50" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title text-white fw-bold">Projects</h5>
+              <p class="card-text text-white">
+                With supporting text below as a natural lead-in to additional
+                content.
+              </p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Certificates</h5>
+              <p class="card-text">
+                With supporting text below as a natural lead-in to additional
+                content.
+              </p>
+            </div>
+          </div>
+
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <h5 class="card-title">Years of Experience</h5>
+              <p class="card-text">
+                With supporting text below as a natural lead-in to additional
+                content.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
       <section class="p-5" id="contact">
         <h1 class="text-center fw-bold py-5 display-3">Contact Me</h1>
+
+        <section class="p-4">
+          <!-- break section -->
+        </section>
+
         <section class="container justify-content-center" style="width: 500px">
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label"
@@ -314,7 +394,11 @@
               id="exampleFormControlTextarea1"
               rows="3"
             ></textarea>
-            <button>Submit</button>
+            <div class="py-4">
+              <button type="button" class="btn btn-outline-light w-100">
+                Submit
+              </button>
+            </div>
           </div>
         </section>
       </section>
