--- a/index.html
+++ b/index.html
@@ -64,17 +64,16 @@
           </a>
           <ul class="dropdown-menu dropdown-color">
             <li>
-              <a
-                class="dropdown-item text-white"
-                href="#carouselExampleIndicators"
-                >Irreal Engine</a
-              >
+              <a class="dropdown-item text-white" href="#">CampusConnect</a>
             </li>
             <li>
-              <a class="dropdown-item text-white" href="#">Minecraft Clone</a>
+              <a class="dropdown-item text-white" href="#">ShopSmart</a>
             </li>
             <li>
-              <a class="dropdown-item text-white" href="#">Impressora 3D</a>
+              <a class="dropdown-item text-white" href="#">TrackIt</a>
+            </li>
+            <li>
+              <a class="dropdown-item text-white" href="#">WeatherWise</a>
             </li>
           </ul>
         </li>
