--- a/index.html
+++ b/index.html
@@ -335,31 +335,44 @@
         <div class="container d-flex gap-5 justify-content-center p-5">
           <div class="card bg-dark bg-opacity-50" style="width: 18rem">
             <div class="card-body">
-              <h5 class="card-title text-white fw-bold">Projects</h5>
-              <p class="card-text text-white">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
+              <h5 class="card-title text-white fw-bold pb-4 fs-3">Projects</h5>
+              <div class="d-flex gap-5 justify-content-between">
+                <p class="card-text color-green fs-2 px-3 pt-2">4</p>
+                <img
+                  class="rounded-circle w-25 h-25"
+                  src="images/code-symbol.jpg"
+                />
+              </div>
             </div>
           </div>
 
-          <div class="card" style="width: 18rem">
+          <div class="card bg-dark bg-opacity-50" style="width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">Certificates</h5>
-              <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
+              <h5 class="card-title text-white fw-bold pb-4 fs-3">
+                Certificates
+              </h5>
+              <div class="d-flex gap-5 justify-content-between">
+                <p class="card-text color-green fs-2 px-3 pt-2">3</p>
+                <img
+                  class="rounded-circle w-25 h-25"
+                  src="images/certificate.webp"
+                />
+              </div>
             </div>
           </div>
 
-          <div class="card" style="width: 18rem">
+          <div class="card bg-dark bg-opacity-50" style="width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">Years of Experience</h5>
-              <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
+              <h5 class="card-title text-white fw-bold pb-4 fs-3">
+                Experience
+              </h5>
+              <div class="d-flex gap-5 justify-content-between">
+                <p class="card-text color-green fs-2 px-3 pt-2">8y</p>
+                <img
+                  class="rounded-circle w-25 h-25"
+                  src="images/computer.jpg"
+                />
+              </div>
             </div>
           </div>
         </div>
