Tech Stack Done

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       crossorigin="anonymous"
     ></script>
 
+    <script src="js/script.js"></script>
+
     <!-- Make nav bar toggler -->
     <nav
       class="fw-bold navbar bg-color nav-fill p-4 sticky-top px-5 border-bottom border-dark"
@@ -265,28 +267,139 @@
           <!-- break section -->
         </section>
 
-        <section class="container">
+        <section id="stack">
           <h1 class="text-center fw-bold py-5">Tech Stack</h1>
 
-          <div class="d-flex gap-5">
-            <div class="bg-dark bg-opacity-50 w-25 card border-light">
+          <div class="d-flex flex-wrap gap-3 justify-content-center py-5">
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
               <img
+                class="img-fluid w-75 h-75"
                 src="images/js-logo.png"
-                class="w-75 h-75 justify-content-center"
+                alt="JavaScript"
               />
             </div>
 
-            <div class="bg-dark bg-opacity-50 w-25 card border-light">
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
               <img
-                src="images/css-logo.png"
-                class="w-75 h-75 justify-content-center"
-              />
-            </div>
-
-            <div class="bg-dark bg-opacity-50 w-25 card border-light">
-              <img
+                class="img-fluid w-75 h-75"
                 src="images/html-logo.png"
-                class="w-75 h-75 justify-content-center"
+                alt="HTML5"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/css-logo.png"
+                alt="CSS3"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/bootstrap-logo.png"
+                alt="Bootstrap"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/tailwind-logo.png"
+                alt="Tailwind"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/java-logo.png"
+                alt="Java"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/c-logo.png"
+                alt="C"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/cpp-logo.png"
+                alt="C++"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/csharp-logo.png"
+                alt="C#"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/php-logo.png"
+                alt="PHP"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/mysql-logo.png"
+                alt="MySQL"
+              />
+            </div>
+
+            <div
+              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+              style="width: 100px; height: 100px"
+            >
+              <img
+                class="img-fluid w-75 h-75"
+                src="images/python-logo.png"
+                alt="Python"
               />
             </div>
           </div>
@@ -333,7 +446,10 @@
         </section>
 
         <div class="container d-flex gap-5 justify-content-center p-5">
-          <div class="card bg-dark bg-opacity-50" style="width: 18rem">
+          <div
+            class="card bg-dark bg-opacity-50 card-custom"
+            style="width: 18rem"
+          >
             <div class="card-body">
               <h5 class="card-title text-white fw-bold pb-4 fs-3">Projects</h5>
               <div class="d-flex gap-5 justify-content-between">
@@ -346,7 +462,10 @@
             </div>
           </div>
 
-          <div class="card bg-dark bg-opacity-50" style="width: 18rem">
+          <div
+            class="card bg-dark bg-opacity-50 card-custom"
+            style="width: 18rem"
+          >
             <div class="card-body">
               <h5 class="card-title text-white fw-bold pb-4 fs-3">
                 Certificates
@@ -355,13 +474,16 @@
                 <p class="card-text color-green fs-2 px-3 pt-2">3</p>
                 <img
                   class="rounded-circle w-25 h-25"
-                  src="images/certificate.webp"
+                  src="images/certificate.jpg"
                 />
               </div>
             </div>
           </div>
 
-          <div class="card bg-dark bg-opacity-50" style="width: 18rem">
+          <div
+            class="card bg-dark bg-opacity-50 card-custom"
+            style="width: 18rem"
+          >
             <div class="card-body">
               <h5 class="card-title text-white fw-bold pb-4 fs-3">
                 Experience
